force-app/main/default/objects/WFPObject1__c/WFPObject1__c.object-meta.xml
<CustomObject>
    <label>WFPObject1</label>
    <nameField>
        <displayFormat>WFP-{0000}</displayFormat>
        <label>WFPObject1 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WFPObjects1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>