force-app/main/default/objects/WFPObject1__c/fields/Child_Info__c.field-meta.xml
<CustomField>
    <fullName>Child_Info__c</fullName>
    <label>Child Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>