force-app/main/default/objects/WFPObject1__c/fields/Dummy_Field__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Field__c</fullName>
    <label>Dummy Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>