force-app/main/default/objects/WFPObject1__c/fields/New_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Field__c</fullName>
    <label>New Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>