force-app/main/default/objects/WFPObject1__c/fields/Survey_Results__c.field-meta.xml
<CustomField>
    <fullName>Survey_Results__c</fullName>
    <label>Survey Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>