force-app/main/default/objects/WFPObject1__c/listViews/Nav_Queue_WFPObject1.listView-meta.xml
<ListView>
    <fullName>Nav_Queue_WFPObject1</fullName>
    <filterScope>Queue</filterScope>
    <label>Nav Queue</label>
    <queue>Nav_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>